# WebStream-Analytics

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_job.ps1  run_job.sh
api/: .env.example  db.py  main.py  utils.py
api/routers/: events.py  health.py  metrics.py
dashboard/: index.html  package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.jsx  api.js  index.css
dashboard/src/components/: Categories.jsx  EventsLog.jsx  Funnel.jsx  Overview.jsx  Realtime.jsx  Revenue.jsx  Timeseries.jsx  TopProducts.jsx  UI.jsx  UserLookup.jsx
dashboard/src/hooks/: useApi.js
deploy/: .env.example  docker-compose-worker.yaml  docker-compose.yaml  dockerfile  init-clickhouse.ps1  init-clickhouse.sh  reset-clickhouse.ps1
producer/: log_producer.py
spark_jobs/: .gitignore  stream_processor.py
