[project]
name = "webstream-analytics"
version = "0.1.0"
description = "Real-time e-commerce analytics pipeline with Kafka, Spark, ClickHouse, FastAPI, and React"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "clickhouse-connect",
    "fastapi[standard]>=0.135.2",
    "kafka-python>=2.3.0",
    "pyspark",
]
